--- a/.github/workflows/breakout.yml
+++ b/.github/workflows/breakout.yml
@@ -2,8 +2,8 @@ name: Gerar GitHub Breakout SVGs
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:    # permite rodar manualmente
+    - cron: "0 0 * * *"        # Executa todo dia à meia-noite UTC
+  workflow_dispatch:           # Permite rodar manualmente
 
 jobs:
   generate:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Gerar SVGs do Breakout
-        uses: cyprieng/[email protected]
+        uses: cyprieng/github-breakout-action@v1
         with:
           github_username: ${{ github.repository_owner }}
 
@@ -37,5 +37,4 @@ jobs:
           git commit -m "chore: atualizar Breakout SVGs" || echo "Sem mudanças"
           git push
         env:
-          # O token padrão já permite push no mesmo repo
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
