--- a/.github/workflows/pacMan.yml
+++ b/.github/workflows/pacMan.yml
@@ -1,39 +1,29 @@
-name: GitHub Pac‑Man Contribution Game
+name: Gerar Pac‑Man Contribution Graph
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # roda todo dia à meia-noite
-  workflow_dispatch:       # permite rodar manualmente
+    - cron: "0 0 * * *"        # roda uma vez por dia
+  workflow_dispatch:           # permite execução manual
 
 jobs:
-  run-pacman:
+  generate:
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     steps:
-      - name: Checkout do repositório
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Gerar SVG do Pac‑Man
-        uses: abozanona/github-contribution-graph-pacman@v1
+      - name: Gerar Pac‑Man contribution graph
+        uses: abozanona/[email protected]
         with:
-          output: svg
+          github_user_name: ${{ github.repository_owner }}
 
-      - name: Mover SVG para pasta images
-        run: |
-          mkdir -p images
-          mv pacman.svg images/pacman.svg
-
-      - name: Configurar Git
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Commit e Push
-        run: |
-          git add images/pacman.svg
-          git commit -m "chore: atualizar Pac‑Man SVG" || echo "Sem mudanças"
-          git push
+      - name: Deploy SVG no branch output
+        uses: crazy-max/[email protected]
+        with:
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
